--- a/start_grant/templates/_loan_info.html
+++ b/start_grant/templates/_loan_info.html
@@ -35,9 +35,7 @@
                         مدت بازپرداخت
                     </div>
                     <div class="col-xs-3">
-                        <select style="width: 100%;" name="refund_duration">
-                            <option value="1">۳۶ ماه</option>
-                        </select>
+                        <input type="number" class="form-control" name="refund_duration" value="{{ customer_request.complete_information.refund_duration }}" />
                     </div>
                     <div class="col-xs-2">
                         مبلغ پیش پرداخت / سهم الشرکه
@@ -46,7 +44,9 @@
                         <input type="number" class="form-control" name="prepayed_amount"
                                value="{{ customer_request.complete_information.prepayed_amount }}"
                                required
+                               number
                                data-validation-required-message="وارد کردن این فیلد الزامی است"
+                               data-validator-number-message="عدد وارد نمایید"
                                 />
                     </div>
                 </div>
