--- a/start_grant/templates/_loan_info.html
+++ b/start_grant/templates/_loan_info.html
@@ -23,7 +23,7 @@
                         نوع تسهیلات
                     </div>
                     <div class="col-xs-3">
-                        <select style="width: 100%;" name="loan_type_id">
+                        <select style="width: 100%;" name="loan_type_id" id="loan_type" depend="refund_type_id" value="{{ customer_request.complete_information.loan_type_id }}">
                             {% for loan_type in loan_types %}
                                 <option value="{{ loan_type.id }}">{{ loan_type.local_name }}</option>
                             {% endfor %}
@@ -83,9 +83,9 @@
                     <div class="col-xs-3">
                         <select style="width: 100%;" name="refund_type_id" id="refund_type_id"
                                 value="{{ customer_request.complete_information.refund_type_id }}">
-                            {% for refund_type in refund_types %}
-                                <option value="{{ refund_type.id }}">{{ refund_type.local_name }}</option>
-                            {% endfor %}
+{#                            {% for refund_type in refund_types %}#}
+{#                                <option value="{{ refund_type.id }}">{{ refund_type.local_name }}</option>#}
+{#                            {% endfor %}#}
                         </select>
                     </div>
                 </div>
