number validations added

--- a/start_grant/templates/_contact_info.html
+++ b/start_grant/templates/_contact_info.html
@@ -40,7 +40,7 @@
                         تلفن
                     </div>
                     <div class="col-xs-3">
-                        <input type="text" class="form-control" name="phone_number"
+                        <input type="number" class="form-control" name="phone_number"
                                value="{{ customer_info.contact_info.phone_number }}"
                                required
                                data-validation-required-message="وارد کردن این فیلد الزامی است"
@@ -50,7 +50,7 @@
                         تلفن همراه
                     </div>
                     <div class="col-xs-3">
-                        <input type="text" class="form-control" name="cell_number"
+                        <input type="number" class="form-control" name="cell_number"
                                value="{{ customer_info.contact_info.cell_number }}"
                                required
                                data-validation-required-message="وارد کردن این فیلد الزامی است"
