--- a/start_grant/templates/_bank_income_info.html
+++ b/start_grant/templates/_bank_income_info.html
@@ -66,9 +66,7 @@
                     </div>
                     <div class="col-xs-3">
                         <input type="number" class="form-control" name="sanad_no"
-                               value="{{ customer_info.bank_income_info.sanad_melki_info.sanad_no }}"
-                               required
-                               data-validation-required-message="وارد کردن این فیلد الزامی است"/>
+                               value="{{ customer_info.bank_income_info.sanad_melki_info.sanad_no }}"/>
                     </div>
                     <div class="col-xs-2">
                         نام مالک
@@ -76,8 +74,7 @@
                     <div class="col-xs-3">
                         <input type="text" class="form-control" name="owner_name"
                                value="{{ customer_info.bank_income_info.sanad_melki_info.owner_name }}"
-                               required
-                               data-validation-required-message="وارد کردن این فیلد الزامی است"/>
+                                />
                     </div>
 
                 </div>
@@ -88,8 +85,6 @@
                     <div class="col-xs-3">
                         <input type="number" name="current_value" class="form-control"
                                value="{{ customer_info.bank_income_info.sanad_melki_info.current_value }}"
-                               required
-                               data-validation-required-message="وارد کردن این فیلد الزامی است"
                                 />
                     </div>
                     <div class="col-xs-2">
@@ -97,9 +92,7 @@
                     </div>
                     <div class="col-xs-3">
                         <input type="text" name="address" class="form-control"
-                               value="{{ customer_info.bank_income_info.sanad_melki_info.address }}"
-                               required
-                               data-validation-required-message="وارد کردن این فیلد الزامی است"/>
+                               value="{{ customer_info.bank_income_info.sanad_melki_info.address }}"/>
                     </div>
                 </div>
             </div>
