--- a/templates/base_dashboard.html
+++ b/templates/base_dashboard.html
@@ -33,6 +33,7 @@
 
 <body>
 <div id="body" class="row" style="margin:0px;">
+    <div class="alertBar alertBar-error "></div>
     <div class="col-lg-2 " style=" padding-right:0px; padding-left:0px; border-left: solid 1px #bbbbbb;height: 100%;
             background: url('{% static "image/base/sidebar.png" %}') repeat scroll 0 0 #E0E0E3;"
          id="right-panel">
@@ -142,6 +143,7 @@
 <script src="{% static 'js/jquery-1.11.0.js' %}"></script>
 <script src="{% static 'datatables/js/jquery.dataTables.js' %}"></script>
 <script src="{% static 'js/persianDatepicker.js' %}"></script>
+<script src="{% static "UI/alertBar/alertBar.js" %}"></script>
 <script src="{% static "bootstrap/js/bootstrap.min.js" %}"></script>
 <script type="text/javascript" src="{% static 'js/jqBootstrapValidation.js' %}"></script>
 <script>
