--- a/guarantor/templates/_guarantor_customer_info.html
+++ b/guarantor/templates/_guarantor_customer_info.html
@@ -8,17 +8,26 @@
         <form id="customer_info_form" name="customer_info_form" method="post"
               action="{% url 'customer:customer_info' %}" novalidate>
             {% csrf_token %}
-            <input type="hidden" name="type" value="{{ customer_request.type }}">
+
+            <input type="hidden" name="type" value="{{ customer_type }}"/>
 
             <div class="control-group">
+                <div class="row controls">
+                    <div class="col-xs-2">
+                        کد ملی
+                    </div>
+                    <div class="col-xs-3">
+                        <input type="number" class="form-control" name="national_number"
+                               value="{{ customer.national_number }}" required>
+                    </div>
+                </div>
                 <div class="row controls">
                     <div class="col-xs-2">
                         نام
                     </div>
                     <div class="col-xs-3">
-                        <input type="text" class="form-control" name="name" value="{{ customer_info.name }}"
+                        <input type="text" class="form-control" name="name" value="{{ customer.name }}"
                                required
-                               data-validation-required-message="وارد کردن این فیلد الزامی است"
                                 />
                     </div>
 
@@ -26,7 +35,7 @@
                         نام خانوادگی
                     </div>
                     <div class="col-xs-3">
-                        <input type="text" class="form-control" name="last_name" value="{{ customer_info.last_name }}"
+                        <input type="text" class="form-control" name="last_name" value="{{ customer.last_name }}"
                                required
                                data-validation-required-message="وارد کردن این فیلد الزامی است"
                                 />
@@ -38,15 +47,15 @@
                     </div>
                     <div class="col-xs-3">
                         <input type="radio" value="male" name="gender"
-                                {% if customer_info and customer_info.gender == 'male' %}
+                                {% if customer and customer.gender == 'male' %}
                                checked="checked"
-                                {% elif not customer_info %}
+                                {% elif not customer %}
                                checked="checked"
                                 {% endif %}
 
                                 >مرد</input>
                         <input type="radio" value="female" name="gender" style="margin-right: 40px;"
-                                {% if customer_info and customer_info.gender == 'female' %}
+                                {% if customer and customer.gender == 'female' %}
                                checked="checked"
                                 {% endif %}
                                 >زن</input>
@@ -58,7 +67,7 @@
                     </div>
                     <div class="col-xs-3">
                         <input type="text" class="form-control" name="father_name"
-                               value="{{ customer_info.father_name }}""
+                               value="{{ customer.father_name }}""
                         required
                         data-validation-required-message="وارد کردن این فیلد الزامی است"
                         />
@@ -68,7 +77,7 @@
                         شماره شناسنامه
                     </div>
                     <div class="col-xs-3">
-                        <input type="text" class="form-control" name="bc_number" value="{{ customer_info.bc_number }}"
+                        <input type="text" class="form-control" name="bc_number" value="{{ customer.bc_number }}"
                                required
                                data-validation-required-message="وارد کردن این فیلد الزامی است"/>
                     </div>
@@ -79,28 +88,18 @@
                     </div>
                     <div class="col-xs-3">
                         <input type="text" class="form-control" name="bc_serial_number"
-                               value="{{ customer_info.bc_serial_number }}"
+                               value="{{ customer.bc_serial_number }}"
                                required
                                data-validation-required-message="وارد کردن این فیلد الزامی است"/>
                     </div>
 
-                    <div class="col-xs-2">
-                        کد ملی
-                    </div>
-                    <div class="col-xs-3">
-                        <input type="text" class="form-control" name="national_number" readonly="readonly"
-                               value="{{ customer_request.cif }}"
-                               required
-                               data-validation-required-message="وارد کردن این فیلد الزامی است"
-                                />
-                    </div>
                 </div>
                 <div class="row">
                     <div class="col-xs-2">
                         محل صدور شناسنامه
                     </div>
                     <div class="col-xs-3">
-                        <input type="text" class="form-control" value="{{ customer_info.bc_place }}" name="bc_place"
+                        <input type="text" class="form-control" value="{{ customer.bc_place }}" name="bc_place"
                                required
                                data-validation-required-message="وارد کردن این فیلد الزامی است"/>
                     </div>
@@ -110,7 +109,7 @@
                     </div>
                     <div class="col-xs-3">
                         <input type="text" class="form-control" required name="birth_date" id="birth_date"
-                               value="{{ customer_info.get_persian_birth_date }}"
+                               value="{{ customer.get_persian_birth_date }}"
                                data-validation-required-message="وارد کردن این فیلد الزامی است"/>
                         <span id="birth_date_span"></span>
                     </div>
@@ -120,7 +119,7 @@
                         محل تولد
                     </div>
                     <div class="col-xs-3">
-                        <input type="text" class="form-control" value="{{ customer_info.birth_place }}"
+                        <input type="text" class="form-control" value="{{ customer.birth_place }}"
                                name="birth_place"
                                required
                                data-validation-required-message="وارد کردن این فیلد الزامی است"/>
