--- a/start_grant/templates/_bank_income_info.html
+++ b/start_grant/templates/_bank_income_info.html
@@ -8,7 +8,8 @@
         <form id="bank_income_form" name="bank_income_form" method="post"
               action="{% url 'customer:bank_income_info' %}" novalidate>
             {% csrf_token %}
-            <input type="hidden" name="customer_id" value="{{ customer_request.cif }}">
+            <input type="hidden" name="customer_id" value="{{ customer_info.pk }}"/>
+            <input type="hidden" name="request_id" value="{{ customer_request.id }}"/>
 
             <div class="control-group">
                 <div class="row">
@@ -66,14 +67,14 @@
                     </div>
                     <div class="col-xs-3">
                         <input type="number" class="form-control" name="sanad_no"
-                               value="{{ customer_info.bank_income_info.sanad_melki_info.sanad_no }}"/>
+                               value="{{ customer_request.vasighe_information.sanad_melki_info.sanad_no }}"/>
                     </div>
                     <div class="col-xs-2">
                         نام مالک
                     </div>
                     <div class="col-xs-3">
                         <input type="text" class="form-control" name="owner_name"
-                               value="{{ customer_info.bank_income_info.sanad_melki_info.owner_name }}"
+                               value="{{ customer_request.vasighe_information.sanad_melki_info.owner_name }}"
                                 />
                     </div>
 
@@ -84,7 +85,7 @@
                     </div>
                     <div class="col-xs-3">
                         <input type="number" name="current_value" class="form-control"
-                               value="{{ customer_info.bank_income_info.sanad_melki_info.current_value }}"
+                               value="{{ customer_request.vasighe_information.sanad_melki_info.current_value }}"
                                 />
                     </div>
                     <div class="col-xs-2">
@@ -92,7 +93,7 @@
                     </div>
                     <div class="col-xs-3">
                         <input type="text" name="address" class="form-control"
-                               value="{{ customer_info.bank_income_info.sanad_melki_info.address }}"/>
+                               value="{{ customer_request.vasighe_information.sanad_melki_info.address }}"/>
                     </div>
                 </div>
             </div>
