--- a/guarantor/templates/register_guarantor.html
+++ b/guarantor/templates/register_guarantor.html
@@ -131,9 +131,9 @@
         <div class="row" id="next_level" style="display: none; padding-bottom: 1%;">
             <div class="col-xs-12" style="text-align: center;">
                 <button type="submit" style=" width: 90%;" id="contact_info_button" class="btn btn-success">
-                    اکنون با کلیک بر روی این بخش می توانید مراحل بعدی اعطای تسهیلات را انجام دهید
+                    اکنون با کلیک بر روی این بخش می توانید این مشتری را به عنوان ضامن درخواست وام
+                    "{{ customer_request.id }}" انتخاب نمایید
                 </button>
-
             </div>
         </div>
         {#        <form method="post">#}
@@ -180,7 +180,6 @@
 
             {% if message %}
                 alertBar('{% trans message %}');
-
             {% endif %}
 
             check_for_showing_next_level();
